--- a/VGPSDKResource/VGPSDKResource/vi.lproj/Localizable.strings
+++ b/VGPSDKResource/VGPSDKResource/vi.lproj/Localizable.strings
@@ -7,13 +7,36 @@
 */
 
 // ===== GLOBAL =====
+"notification" = "Thông báo";
 "back" = "Quay lại";
 "ok" = "Đồng ý";
 "cancel" = "Hủy";
 "update" = "Cập nhật";
+"update.success" = "Cập nhật thành công";
 "send" = "Gửi";
 "verify" = "Xác thực";
+"verify.code" = "Mã xác nhận";
 "verified" = "Đã xác thực";
+"resend" = "Gửi lại mã";
+"resend.success" = "Gửi lại mã thành công";
+"error" = "Lỗi";
+"error.ios13.require" = "Tính năng chỉ hỗ trợ trên iOS 13 trở lên";
+
+// ===== CONFIG =====
+"config.error" = "Lỗi cấu hình tập tin VGP";
+"config.error.missing" = "Không tìm thấy cấu hình tập tin VGP";
+
+// ===== SERVER =====
+"network.error" = "Lỗi kết nối mạng";
+"server.error" = "Lỗi truy cập đến máy chủ VGP";
+"server.info.error" = "Lỗi không lấy được thông tin SDK";
+"server.setting.error" = "Lỗi không lấy được cấu hình SDK";
+"server.checking" = "Đang kiểm tra cấu hình server, vui lòng thử lại sau.";
+
+// ===== SHARE FACEBOOK =====
+"share_facebook_success" = "Chia sẻ thành công";
+"share_facebook_error" = "Chia sẻ lỗi";
+"share_facebook_cancel" = "Huỷ";
 
 // ===== LOGIN VIEW =====
 "login.right.normal" = "Tài khoản VGP";
@@ -28,11 +51,17 @@
 "login.right.repassword" = "Xác nhận mật khẩu";
 "login.right.email" = "Thư điện tử";
 
+"login.apple.error" = "Đăng nhập không thành công Apple mã lỗi: (%ld)";
+
+// ===== REGISTER VIEW =====
+"register.password.confirm.error" = "Mật khẩu xác nhận không đúng";
+
 // ===== FORGOT VIEW =====
 "forgot.right.txt" = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.";
 "forgot.right.phone.text1" = "Soạn tin theo cú pháp";
 
 // ===== PROFILE VIEW =====
+"profile.link" = "Liên kết tài khoản";
 "profile.logout" = "Đăng xuất";
 "profile.edit_profile" = "Chỉnh sửa thông tin";
 "profile.info" = "Thông tin cá nhân";
