--- a/VGPSDKResource/VGPSDKResource/en.lproj/Localizable.strings
+++ b/VGPSDKResource/VGPSDKResource/en.lproj/Localizable.strings
@@ -33,6 +33,7 @@
 "server.error" = "VGP server error";
 "server.info.error" = "VGP server info error";
 "server.setting.error" = "VGP server setting error";
+"server.setting.payment.error" = "VGP server setting IAP items error";
 "server.checking" = "Checking version, please try again later.";
 
 // ===== SHARE FACEBOOK =====
@@ -54,8 +55,6 @@
 "login.right.email" = "Email";
 
 "login.apple.error" = "Error sign in with apple code: (%ld)";
-"init.account" = "Init Account";
-"error.init.account.require" = "Bạn cần khởi tạo tài khoản VGP để sử dụng tính năng này";
 
 // ===== REGISTER VIEW =====
 "register.password.confirm.error" = "Password confirm not match";
@@ -65,10 +64,9 @@
 "forgot.right.phone.text1" = "Send SMS";
 
 // ===== PROFILE VIEW =====
-"profile.link" = "Link account";
-"profile.logout" = "Logout";
-"profile.edit_profile" = "Update Account";
 "profile.info" = "User Information";
+"profile.account" = "Account";
+"profile.logout" = "Logout";
 "profile.fullname" = "Full Name";
 "profile.gender" = "Gender";
 "profile.gender.select"= "Select your gender";
@@ -83,6 +81,12 @@
 "profile.place_of_issue" = "Place of issue";
 "profile.phone" = "Phone";
 "profile.email" = "Email";
+"profile.init.account" = "Init Account";
+"profile.protect" = "Protect Account";
+"error.init.account.require" = "Please update username and password to use this feature";
+"profile.change.password" = "Change Password";
+"profile.new_password" = "New Password";
+"profile.old_password" = "Old Password";
 
 // ===== PROTECT VIEW =====
 "profile.protect.text" = "Bla blo Bla blo Bla blo Bla blo Bla blo Bla blo Bla blo Bla blo Bla blo Bla blo Bla blo Bla blo";
